--- a/haskell-algos.cabal
+++ b/haskell-algos.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      BinarySearch
       MergeAndSort
   other-modules:
       Paths_haskell_algos
